fix(front-end): fix z-index

--- a/src/main/webapp/assets/styles/global.css
+++ b/src/main/webapp/assets/styles/global.css
@@ -199,7 +199,7 @@ img.logoImage {
     height: 100vh;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     right: 0;
     background-color: var(--md-sys-color-surface);
